# whiteout-extreme

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  CONTRIBUTING.md  MountRacer.cpp  MountRacer.h  README.md
assets/audio/: sounds.json
assets/shaders/: basic.frag  basic.vert  depth.frag  depth.vert  gouraud.frag  gouraud.vert  model.frag  model.vert  particle.frag  particle.vert  snow_particle.vert  textured.frag  textured.vert  video.frag  video.vert  world.frag  world.vert
assets/textures/sky/: snow_landscape.hdr
assets/vehicledata/: Base.json  DirectDrive.json  EngineDrive.json  NewConfig-Base.json  NewConfig-EngineDrive.json  Original-Base.json  Original-EngineDrive.json
assets/video/: intro_cinematic_v2.mpeg  menu_background_loop.mpeg
cmake/: fmod.cmake  gl.cmake  in.cmake  physx.cmake  text.cmake  ui.cmake
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/pl_mpeg/: pl_mpeg.h
src/: main.cpp
src/ai/: AISystem.cpp  AISystem.hpp  RacingSystem.cpp  RacingSystem.hpp
src/app/: GameState.hpp  GameTime.h  GameTime.hpp  RacingGame.cpp  RacingGame.h  RacingGame.hpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/components/: AI.h  AvalancheComponent.h  Entity.h  Model.h  ModelRenderable.h  Physics.hpp  Racer.h  Renderable.h  RigidBody.h  SnowBall.h  SnowCannon.h  SnowEmitter.h  Transform.h  VehicleComponent.h
src/core/: ImGuiWrapper.cpp  ImGuiWrapper.h  RenderingStats.cpp  RenderingSystem.cpp  RenderingSystem.h  RenderingSystem.hpp  Shader.cpp  Shader.h  Text.cpp  Text.h
src/core/assets/: AssetManager.cpp  AssetManager.hpp  AssetPath.cpp  AssetPath.h  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.hpp  Texture.cpp  Texture.h  Texture.hpp
src/core/buffer/: Geometry.cpp  Geometry.h  Geometry.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp
src/core/gl/: GLDebug.cpp  GLHandles.cpp  GLHandles.hpp
src/core/render/: Shader.cpp  Shader.h  Shader.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp  ShapeConfig.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  SnowRenderer.cpp  SnowRenderer.hpp
src/core/scene/: BaseCamera.cpp  BaseCamera.hpp  Camera.cpp  Camera.hpp  CameraStats.hpp  FreeCamera.cpp  FreeCamera.hpp  RacingCamera.cpp  RacingCamera.hpp  Transform.cpp  Transform.hpp  TurnTableCamera.cpp  TurnTableCamera.hpp
src/ecs/: Coordinator.hpp  SystemManager.hpp  Types.hpp
src/gameplay/: SnowBallisticSystem.cpp  SnowBallisticSystem.hpp
src/input/: InputManager.cpp  InputManager.hpp  VehicleControlSystem.cpp  VehicleControlSystem.hpp  Window.cpp  Window.hpp
src/input/glfw/: InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp
src/input/panel/: ImGuiPanel.cpp  ImGuiPanel.hpp  ImGuiWrapper.cpp
src/physics/: Avalanche.cpp  Avalanche.hpp  BoxesTest.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystem.hpp  PhysicsTest.cpp  PhysicsTest.h  PhysicsTest.hpp  VehicleControlSystem.cpp  VehicleControlSystem.hpp  VehicleFourWheelDrive.cpp  VehicleFourWheelDrive.hpp
src/physics/common/: Flags.hpp  PhysicsCallback.hpp
src/physics/objects/: PhysicsObject.cpp  PhysicsObject.hpp
src/physics/vehiclecommon/: SnippetVehicleHelpers.cpp
src/ui/: GameMenus.cpp  GameMenus.hpp
src/utils/: logger.h  math.cpp  math.hpp  parser.cpp  parser.hpp  prefer_discrete_GPU.h
src/vfx/: SnowParticle.hpp  SnowVfxSystem.cpp  SnowVfxSystem.hpp  TerrainSnowSampler.cpp  TerrainSnowSampler.hpp
src/video/: VideoPlayer.cpp  VideoPlayer.hpp
